; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/classq/extr_classq.c__flushq_flow.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/classq/extr_classq.c__flushq_flow.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @_flushq_flow(i32* %0, i32 %1, i32* %2, i32* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  store i32* %3, i32** %8, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = call i32 @qptype(i32* %9)
  switch i32 %10, label %17 [
    i32 128, label %11
  ]

11:                                               ; preds = %4
  %12 = load i32*, i32** %5, align 8
  %13 = load i32, i32* %6, align 4
  %14 = load i32*, i32** %7, align 8
  %15 = load i32*, i32** %8, align 8
  %16 = call i32 @_flushq_flow_mbuf(i32* %12, i32 %13, i32* %14, i32* %15)
  br label %19

17:                                               ; preds = %4
  %18 = call i32 @VERIFY(i32 0)
  br label %19

19:                                               ; preds = %17, %11
  ret void
}

declare dso_local i32 @qptype(i32*) #1

declare dso_local i32 @_flushq_flow_mbuf(i32*, i32, i32*, i32*) #1

declare dso_local i32 @VERIFY(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
